unpackaged/objects/copado__Copado_Notification__c.object
<CustomObject>
	<description>Used for Copado Notifications using the Streaming API.</description>
	<fields>
		<fullName>copado__AttachmentId__c</fullName>
		<externalId>true</externalId>
		<label>AttachmentId</label>
		<length>50</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Matching_Key__c</fullName>
		<label>Matching Key</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Message__c</fullName>
		<label>Message</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Parent2Id__c</fullName>
		<label>Parent2Id</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__ParentId__c</fullName>
		<label>ParentId</label>
		<length>50</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Type__c</fullName>
		<label>Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__isFinished__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Finished</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__isSuccess__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Success</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__status__c</fullName>
		<label>status</label>
		<type>TextArea</type>
	</fields>
	<label>Copado Notification</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Type__c</columns>
		<columns>copado__isFinished__c</columns>
		<columns>copado__isSuccess__c</columns>
		<columns>copado__status__c</columns>
		<columns>UPDATEDBY_USER.ALIAS</columns>
		<columns>LAST_UPDATE</columns>
		<columns>CREATED_DATE</columns>
		<columns>copado__Matching_Key__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<label>CopadoNotification Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Copado Notifications</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>